wood background now fixed, needs update on mobile

--- a/less/index.less
+++ b/less/index.less
@@ -49,8 +49,8 @@
 .background {
     height: 100vh;
     background-image: url("/img/background-wood.jpeg");
-    background-size: 100%;
-    background-repeat: round;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 
     .logo, .cta {
         transition: all 0.75s ease-in-out;
